--- a/styles/style.css
+++ b/styles/style.css
@@ -61,31 +61,114 @@ hr {
 /*---------------
  top blog styles 
  ---------------*/
- .blogs{
+.blogs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 26px;
- }
- .blog{
+}
+
+.blog {
     display: flex;
     align-items: center;
- }
+}
+
 .blog img {
     width: 177px;
     height: 117px;
 }
-.blog-info{
+
+.blog-info {
     margin-left: 16px;
 }
-.blog-title{
+
+.blog-title {
     font-size: 20px;
 }
-.blog-author{
+
+.blog-author {
     color: #9F9F9F;
     font-size: 16px;
 }
-.blog-author a{
+
+.blog-author a {
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
+}
+
+
+/*------------
+ courses styles
+-------------- */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 25px;
+}
+.course .course-banner img {
+    width: 224px;
+    height: 104px;
+}
+.course-title{
+    font-weight: 500;
+    color: #1E1E1E;
+}
+.course-author{
+    font-weight: 400;
+    color: #ED6B4F;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.course-duration{
+    background-color: #FFE4E8;
+    border-radius: 15px;
+    padding: 5px;
+}
+.fa-clock{
+    color: #FF4A60;
+}
+.clock{
+    color: #FF4A60;
+}
+
+/*--------------
+ Media Queries
+---------------- */
+
+/* Mobile devices */
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column-reverse;
+    }
+}
+
+/* Tablet devices */
+@media only screen and (min-width: 689px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
